// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentCard Container > should render correctly with children 1`] = `
<div
  class="relative bg-clip-border text-gray-700 flex select-none flex-col overflow-hidden rounded-xl bg-white shadow-lg"
>
  Child
</div>
`;

exports[`ContentCard Container > should render correctly with custom className 1`] = `
<div
  class="relative bg-clip-border text-gray-700 flex select-none flex-col overflow-hidden rounded-xl bg-white shadow-lg mt-4"
>
  Child
</div>
`;
